--- a/themes/default/view/omeka/site/page/show.phtml
+++ b/themes/default/view/omeka/site/page/show.phtml
@@ -1,38 +1,4 @@
 <?php
-$this->headLink()->appendStylesheet($this->assetUrl('css/page-blocks.css', 'Omeka'));
-$this->htmlElement('body')->appendAttribute('class', 'page');
-$this->pageTitle($page->title(), 2);
-$showPagePagination = $this->siteSetting('show_page_pagination', true);
+echo $this->partial('default/'.$page->slug(), []);
+return ;
 ?>
-
-<?php
-$nav = $site->publicNav();
-$container = $nav->getContainer();
-$activePage = $nav->findActive($container);
-if ($activePage):
-?>
-    <?php if ($activePage['depth'] !== 0): ?>
-    <nav class="breadcrumbs"><?php echo $nav->breadcrumbs(); ?></nav>
-    <?php endif; ?>
-<?php endif; ?>
-
-<?php if ($activePage): ?>
-    <?php if ($this->displayNavigation && $activePage['page']->hasPages()): ?>
-    <nav class="sub-menu"><?php echo $nav->menu()->renderSubMenu(); ?></nav>
-    <?php endif; ?>
-<?php endif; ?>
-
-<?php $this->trigger('view.show.before'); ?>
-<div class="blocks">
-    <?php
-    if($page->slug()=='cmap')
-        echo $this->partial('default/'.$page->slug(), ['site'=>$site]);
-    else
-        echo $this->content;
-    ?>
-</div>
-<br/>
-<?php $this->trigger('view.show.after'); ?>
-<?php if ($showPagePagination): ?>
-<?php echo $this->sitePagePagination(); ?>
-<?php endif; ?>
