--- a/themes/default/view/layout/layout.phtml
+++ b/themes/default/view/layout/layout.phtml
@@ -1,4 +1,9 @@
 <?php
+$json = $this->params()->fromQuery('json') ? $this->params()->fromQuery('json') : $this->params()->fromPost('json', '');
+if($json){
+    echo $this->content;
+    return ;
+}
 $escape = $this->plugin('escapeHtml');
 $siteTitle = $site->title();
 $this->htmlElement('html')->setAttribute('lang', $this->lang());
