--- a/themes/default/view/default/ajaxPos.phtml
+++ b/themes/default/view/default/ajaxPos.phtml
@@ -1,4 +1,6 @@
 <?php
-$ajax = $this->ajaxPos();
-echo $ajax;
+//$ajax = $this->ajaxPos();
+$params = $this->params()->fromPost('itemSet',false);
+$result = $this->EntityRelationFactory('updatePosition',$params);
+echo json_encode($result);
 ?>
